Add other technical skills section and update styles

--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@
       <h2>Skills</h2>
 
       <div class="box"></div>
+      <h4 class="other-skills-head">Other Technical Skills</h4>
+      <div class="other-skills">
+        <ul>
+          <li>Microsoft Windows</li>
+          <li>Microsoft Office</li>
+          <li>Canva</li>
+          <li>Deployment</li>
+          <li>Hosting</li>
+          <li>Domain Management</li>
+          <li>Command Line Interface</li>
+        </ul>        
+      </div>
     </div>
 
     <div id="education" class="spacer"></div>
