Added Latest Resume

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2>Developer</h2>
       </div>
       <div class="btns">
-        <a href="" download="">Download CV</a>
+        <a href="./Vatsal_Saxena_Resume.pdf" download="">Download CV</a>
         <a href="#connect">Contact Me</a>
         <a href="https://vatsalsaxena-projects.netlify.app/" target="_blank">Projects</a>
         <a href="" title="coming soon">Works</a>
