--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
     ></script>
     <script type="text/javascript">
-      (function() {
-          emailjs.init("4T-nuIusr_WSXK11D");
+      (function () {
+        emailjs.init("4T-nuIusr_WSXK11D");
       })();
-  </script>
+    </script>
     <script src="./js/email.js"></script>
   </head>
   <body>
@@ -138,10 +138,13 @@
             <div class="timeline-date">2024</div>
             <div class="timeline-title">
               HTML, CSS & JavaScript Certificates
-              <i
-                class="show-certificates fa-solid fa-arrow-up-right-from-square"
-                title="Show Certificates"
-              ></i>
+              <a class="show-certificates" href="./certificates.html"
+                >Show Certificates
+                <i
+                  class="fa-solid fa-arrow-up-right-from-square"
+                  title="Show Certificates"
+                ></i
+              ></a>
             </div>
             <div class="timeline-content">
               Programming Hub, Lets Upgrade and Sololearn
@@ -196,7 +199,6 @@
           <textarea placeholder="Message" id="message" required></textarea>
           <button type="submit">Send</button>
         </form>
-
       </div>
       <div class="box">
         <a
@@ -232,16 +234,17 @@
 
       <div class="footer-inner">
         <div>
-          <h3>Technologies used</h3>
+          <h3>Tech Stack</h3>
           <ul>
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
+            <li>EmailJS</li>
           </ul>
         </div>
 
         <div>
-          <h3>External Resources</h3>
+          <h3>Resources Used</h3>
           <ul>
             <li>Font Awesome</li>
             <li>Google Fonts</li>
@@ -252,11 +255,6 @@
         <div>
           <h3>Other Links</h3>
           <ul>
-            <li>
-              <a href="https://vatsalsaxena.w3spaces.com/" target="_blank"
-                >Vatsal Saxena | C.V.</a
-              >
-            </li>
             <li>
               <a
                 href="https://vatsalsaxena-projects.netlify.app/"
