--- a/certificates.html
+++ b/certificates.html
@@ -3,8 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple Slideshow</title>
+    <title>Vatsal Saxena | Certificates</title>
+    <link rel="shortcut icon" href="./images/Profile.jpg" type="image/x-icon" />
     <style>
+      :root {
+        --primary-color: #4dffb5;
+        --secondary-color: #999;
+        --shadow-color: #4dffb56d;
+        --bg-color: #121212;
+        --font-color: #ededed;
+      }
+
+      ::-webkit-scrollbar {
+        background-color: var(--bg-color);
+      }
+      ::-webkit-scrollbar-thumb {
+        background-color: var(--shadow-color);
+      }
+
       body {
         font-family: "Arial", sans-serif;
         margin: 0;
@@ -13,35 +29,37 @@
         flex-direction: column;
         align-items: center;
         min-height: 100vh;
-        background-color: #f5f5f5;
+        background-color: var(--bg-color);
       }
 
       .back-btn {
         position: absolute;
         top: 20px;
         right: 20px;
-        bottom: unset;
-        text-decoration: none;
-        padding: 10px 20px;
-        background-color: rgb(236, 28, 28);
+        padding: 20px;
+        font-size: 14px;
+        background-color: transparent;
+        color: var(--primary-color);
+        box-shadow: 0px -3px 15px 0px var(--shadow-color) inset;
         border-radius: 10px;
-        color: white;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        transition: all 1s ease;
+        font-weight: bold;
+        transition: all 0.5s ease;
+        text-align: center;
+        text-decoration: none;
+        width: 100px;
         z-index: 1;
       }
       .back-btn:hover {
-        background-color: rgb(193, 25, 25);
+        transform: scale(1.1);
       }
 
       .slideshow-container {
-        /* height: 500px; */
         position: relative;
         margin: 20px;
         overflow: hidden;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 4px 8px var(--shadow-color);
         border-radius: 8px;
-        background-color: white;
+        background-color: var(--shadow-color);
       }
 
       .slide {
@@ -78,19 +96,23 @@
       }
 
       .nav-btn {
-        background-color: #4caf50;
-        color: white;
+        width: 100px;
+        margin: 10px;
+        padding: 20px;
+        font-size: 14px;
+        background-color: transparent;
+        color: var(--primary-color);
+        box-shadow: 0px -3px 15px 0px var(--shadow-color) inset;
+        border-radius: 10px;
+        font-weight: bold;
+        transition: all 0.5s ease;
+        text-align: center;
+        text-decoration: none;
         border: none;
-        padding: 10px 20px;
-        margin: 0 5px;
-        cursor: pointer;
-        border-radius: 4px;
-        font-size: 16px;
-        transition: background-color 0.3s;
       }
 
       .nav-btn:hover {
-        background-color: #45a049;
+        transform: scale(1.1);
       }
 
       .dots-container {
@@ -102,7 +124,7 @@
         height: 12px;
         width: 12px;
         margin: 0 5px;
-        background-color: #bbb;
+        background-color: var(--font-color);
         border-radius: 50%;
         display: inline-block;
         cursor: pointer;
@@ -110,7 +132,7 @@
       }
 
       .active-dot {
-        background-color: #4caf50;
+        background-color: var(--primary-color);
       }
 
       @media screen and (max-width: 650px) {
