--- a/index.html
+++ b/index.html
@@ -15,16 +15,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
-    ></script>
-    <script type="text/javascript">
-      (function () {
-        emailjs.init("4T-nuIusr_WSXK11D");
-      })();
-    </script>
-    <script src="./js/email.js"></script>
   </head>
   <body>
     <div class="loading-screen" id="loadingScreen">
@@ -285,6 +275,39 @@
       >
     </footer>
 
+    <script>
+      const form = document.getElementById("contact-form");
+      const responseMsg = document.getElementById("status-message");
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+
+        const formData = {
+          name: form.name.value,
+          email: form.email.value,
+          message: form.message.value,
+        };
+
+        try {
+          const res = await fetch("https://nodemailer-proxy-rouge.vercel.app/api/send", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(formData),
+          });
+
+          const data = await res.json();
+          if (res.ok) {
+            responseMsg.textContent = "✅ Email sent successfully!";
+            form.reset();
+          } else {
+            responseMsg.textContent = "❌ Failed to send email. Try again.";
+            console.error(data);
+          }
+        } catch (err) {
+          responseMsg.textContent = "❌ Error: " + err.message;
+        }
+      });
+    </script>
     <script src="./js/script.js"></script>
     <script src="./js/loading.js"></script>
   </body>
