--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
       <div class="btns">
         <a href="./Vatsal_Saxena_Resume.pdf" download="">Download CV</a>
         <a href="#connect">Contact Me</a>
-        <a href="https://vatsalsaxena-projects.netlify.app/" target="_blank"
-          >Projects</a
-        >
-        <a href="" title="coming soon">Works</a>
+        <a href="https://vsprojects.vercel.app/" target="_blank">Projects</a>
+        <a href="#" title="coming soon">Works</a>
       </div>
     </main>
 
@@ -262,24 +260,31 @@
           <h3>Resources Used</h3>
           <ul>
             <li>Font Awesome</li>
-            <li>Google Fonts</li>
+            <li>EmailJS</li>
             <li>Github Pages</li>
           </ul>
         </div>
 
         <div>
-          <h3>Other Links</h3>
+          <h3>VS Trio</h3>
           <ul>
             <li>
               <a
-                href="https://vatsalsaxena-projects.netlify.app/"
+                href="/"
+                >Vatsal Saxena | Portfolio</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://vsprojects.vercel.app/"
                 target="_blank"
                 >Vatsal Saxena | Projects</a
               >
             </li>
             <li>
-              <a href="https://linktr.ee/vatsal_saxena/" target="_blank"
-                >Vatsal Saxena | Linktr.ee</a
+              <a
+                href="#"
+                >Vatsal Saxena | Works</a
               >
             </li>
           </ul>
