--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div id="skills" class="spacer"></div>
 
     <div class="skills container">
-      <h2>Skills</h2>
+      <h2>Skills & Tools</h2>
 
       <div class="box"></div>
       <h4 class="other-skills-head">Other Technical Skills</h4>
